added border and transition on the pictures

--- a/style.css
+++ b/style.css
@@ -44,21 +44,69 @@
     display:inline-block;
     border-radius: 5px;
 }
-.pictures{
-    display:flex;
-   justify-content: space-between;
-    width: 800px;
-    margin: 10px 100px 0px 300px;
-    flex: 1;
+.img-container {
+    width: 180px;
+    height: 200px;
+   
 }
-.con6{
-display: flex;
-margin: 0px 100px 10px 255px;
-justify-content: space-evenly;
-font-style: italic;
-flex: 1;
-width: 900px;
+.item1{
+    border: 4px solid #6686a1;
+    border-radius: 12px;
+    width: 174px;
+    height: 200px;
 }
+.item2{
+    border: 4px solid #6686a1;
+        border-radius: 12px;
+        width: 180px;
+        height: 200px;
+    }
+.item3{
+        border: 4px solid #6686a1;
+        border-radius: 12px;
+        width: 186px;
+        height: 200px;
+    }
+.item4{
+
+    border: 4px solid #6686a1;
+    border-radius: 12px;
+    width: 160px;
+    height:200px
+
+}
+.pic1{
+    border: 4px solid #6686a1;
+        border-radius: 12px;
+        width: 300px;
+        height: 200px
+}
+.img-container img {
+   
+    transition: .3s;
+}
+
+.img-container img:hover {
+    transform: scale(110%);
+    transition: .2s
+}
+ .illustration{
+            display:flex;
+        margin-left: 200px;
+            width: 1000px;
+              gap: 60px;
+                justify-content: space-around;
+        }
+
+
+.illustration-container h4 {
+    width: 200px;
+    filter: contrast(50%);
+}
+
+
+
+
 .discription{
     color: #1f2937 ;
     font: 36px extrabold;
@@ -98,7 +146,7 @@ justify-content: flex-start;
 justify-content: space-around;
 
 align-items: center;
-margin: 50px 240px;
+margin: 50px 230px;
 }
 .con10 p{
 border-radius: 3px;
